--- a/kMeans.ipynb
+++ b/kMeans.ipynb
@@ -33,6 +33,15 @@
         "id": "GC7a2f_Os6C_",
         "outputId": "e79bac67-8545-405b-ca37-8aac0800ebe7"
       },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Done\n"
+          ]
+        }
+      ],
       "source": [
         "# importing necessary libraries\n",
         "import numpy as np\n",
@@ -147,8 +156,7 @@
         "#This is the 'driver' part of the code\n",
         "maxIter = 1000\n",
         "numClusters = 3\n",
-        "X, Y = load_data('/content/drive/MyDrive/Debernardi_et_al_2020_data.csv')\n",
-        "#X, Y = load_data('/content/drive/MyDrive/nonlinear_project/Debernardi_et_al_2020_data.csv')\n",
+        "X, Y = load_data('Debernardi_et_al_2020_data.csv')\n",
         "#Y = np.argmax(Y, axis=1)\n",
         "X = X[:, 0:6] # drop the last column - we don't need it\n",
         "\n",
